# yacctt

./: .gitignore  README.md  Setup.hs  flake.nix  yacctt2.cabal
examples/: int.ytt
nix/: hix.nix
src/: Cartesian.hs  Main.hs
